(PC-28423)[PRO] fix: fix offerer details button alignment

--- a/pro/src/pages/Home/Offerers/OffererDetails.module.scss
+++ b/pro/src/pages/Home/Offerers/OffererDetails.module.scss
@@ -23,6 +23,7 @@
 .venue-buttons {
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: rem.torem(24px);
 }
 
